--- a/src/ucep-client/index.html
+++ b/src/ucep-client/index.html
@@ -24,7 +24,7 @@
     </script>
     <!-- TailwindCSS: End. -->
   </head>
-  <body>
+  <body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
